# mf-wayland

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  hello-wayland.c  main.c  story.tex  поезд.tex  прогулка.tex
